--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "next-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "classnames": "^2.2.6",
-    "next": "^10.0.5",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^6.7.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "tailwindcss": "^2.0.2"
-  }
+	"name": "next-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "NODE_OPTIONS='--inspect' next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"classnames": "^2.2.6",
+		"gray-matter": "^4.0.2",
+		"next": "^10.0.5",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1"
+	}
 }
